--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "lucide-react": "^0.564.0",
-    "next": "14.2.24",
+    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -23,7 +23,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.2.24",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
