--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.95.3",
     "@types/three": "^0.182.0",
     "lucide-react": "^0.564.0",
-    "next": "14.2.24",
+    "next": "^16.1.6",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.182.0"
