--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/three": "^0.182.0",
+    "framer-motion": "^12.34.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
     "react": "^18",
