--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.8",
     "@next/font": "^14.2.15",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/three": "^0.182.0",
+    "antd": "^6.3.0",
     "framer-motion": "^12.34.2",
     "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
