مستندات العمارة: مجلدات افتراضية، نقل، سحب وإفلات، صلاحيات
- إضافة صفحة خرائط ومستندات العمارة (مجلدات + ملفات PDF معاينة/تحميل)
- إعادة تسمية وحذف ونقل مجلدات وملفات مع تأكيد من داخل المنصة
- سحب وإفلات الملفات والمجلدات بين المجلدات والرئيسية
- صلاحيات: رفع، إنشاء مجلد، حذف في الإعدادات المتقدمة
- SQL: building_folders, building_documents, RLS، سياسات التخزين
- نشاط عدادات الكهرباء في لوحة النشاطات
- تحسينات واجهة تفاصيل المبنى والروابط

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^6.3.0",
     "framer-motion": "^12.34.2",
     "gsap": "^3.14.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
     "react": "^18",
